# pydantic-project

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  vercel.json
app/api/: danger.py  exceptions.py  polls.py  votes.py
app/models/: choice.py  polls.py  results.py  votes.py
app/services/: utils.py
